#
# configure.in --
#
#      Process this file with autoconf to produce a configure script.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
#
# @(#) $Id$
#

AC_INIT(tools/smilint.c)

LIBSMI_VERSION=0.1

case `uname -s`-`uname -r` in
    Linux*)
        SHLIB_CFLAGS="-fPIC"
        SHLIB_LD='${CC} -shared'
        SHLIB_SUFFIX=".so"
        DL_OBJS="tclLoadDl.o"
        DL_LIBS="-ldl"
        LD_FLAGS="-rdynamic"
        LD_SEARCH_FLAGS=""
        ;;
    SunOS-5*)
        SHLIB_CFLAGS="-fPIC"
        SHLIB_LD="/usr/ccs/bin/ld -G -z text"
        SHLIB_SUFFIX=".so"
        DL_OBJS="tclLoadDl.o"
        DL_LIBS="-ldl"
        LD_FLAGS=""
        LD_SEARCH_FLAGS='-R ${LIB_RUNTIME_DIR}'
        ;;
esac

AC_DEFINE(BACKEND_SMI)

AC_ARG_WITH(cflags,
[  --with-cflags=FLAGS     use FLAGS for CFLAGS],
CFLAGS="$withval")

AC_ARG_ENABLE(sming,
[  --enable-sming          enable SMIng support],
AC_DEFINE(BACKEND_SMING))

AC_PROG_YACC
AC_PROG_LEX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mktime putenv strcspn strdup strerror strstr strtod strtol strtoul)

AC_SUBST(LIBSMI_VERSION)
AC_SUBST(CC)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_LD)
AC_SUBST(SHLIB_SUFFIX)
AC_SUBST(LEX)
AC_SUBST(YACC)
AC_SUBST(RANLIB)
AC_SUBST(CFLAGS)
AC_SUBST(DEFS)
AC_SUBST(DL_LIBS)
AC_SUBST(LD_FLAGS)
AC_SUBST(LD_SEARCH_FLAGS)
AC_SUBST(LIBS)

AC_OUTPUT(Makefile)
