#
# Makefile.am --
#
#      Template to generate the doc Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am,v 1.6 2002/12/22 16:20:06 strauss Exp $
#

EXTRA_DIST		= draft-irtf-nmrg-sming-02.txt \
			  draft-irtf-nmrg-smi-xml-00.txt smi.dtd \
			  draft-irtf-nmrg-smi-xml-01.txt smi.xsd \
			  ibrpib-assignments.txt smi.dia

