#
# configure.in --
#
#      Process this file with autoconf to produce a configure script.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: configure.in,v 1.22 1999/06/10 17:54:34 strauss Exp $
#

AC_INIT(tools/smilint.c)
AM_INIT_AUTOMAKE(libsmi,0.1.5-pre3)
# Note: also change shlib version version lib/Makefile.am:libsmi_la_LDFLAGS ?

AC_DEFINE(BACKEND_SMI)
AC_DEFINE(BACKEND_SMING)

AC_ARG_WITH(cflags,
[  --with-cflags=FLAGS     use FLAGS for CFLAGS],
CFLAGS="$withval")

AC_ARG_WITH(mibdir,
[  --with-mibdir=DIR       use DIR to install libsmi MIB modules [DATADIR/mibs]],
mibdir="$withval", mibdir="/usr/local/share/mibs")

AC_ARG_WITH(smipath,
[  --with-smipath=DIR:DIR  default DIRs to search for MIB modules [MIBDIR]],
smipath="$withval", smipath="$mibdir")
AC_DEFINE_UNQUOTED(DEFAULT_SMIPATH, "$smipath")


AC_ARG_ENABLE(smi,
[  --enable-smi            enable SMIv1/v2 parser support],
AC_DEFINE(BACKEND_SMI))

AC_ARG_ENABLE(sming,
[  --enable-sming          enable SMIng parser support],
AC_DEFINE(BACKEND_SMING))

AC_PATH_PROG(FLEX, "flex")
if test -z "${FLEX}" ; then
  echo "NOTE: We will not be able to build scanner C code from flex sources."
fi

AC_PATH_PROG(BISON, "bison")
if test -z "${BISON}" ; then
  echo "NOTE: We will not be able to build parser C code from bison sources."
fi

AC_PATH_PROG(BASH, "bash")

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)

if ${CONFIG_SHELL} ./libtool --features | grep "enable static" >/dev/null; then
  STATIC=-static
else
  STATIC=
fi
AC_SUBST(STATIC)

AC_SUBST(BASH)
AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(mibdir)
AC_SUBST(smipath)

AC_OUTPUT(Makefile lib/Makefile tools/Makefile mibs/Makefile test/Makefile test/mibs/Makefile doc/Makefile lib/libsmi.3 lib/smi_macro.3 lib/smi_module.3 lib/smi_node.3 lib/smi_type.3 lib/smi_config.3 tools/smiquery.1 tools/smilint.1 tools/smidump.1 test/parser.test, chmod a+x test/parser.test)
