#
# Makefile.am --
#
#      Template to generate the mibs/ietf Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am,v 1.2 1999/10/06 17:37:18 strauss Exp $
#

EXTRA_DIST              = $(shell ls -1 | egrep -v 'CVS|Makefile')
