#
# Makefile.am --
#
#      Template to generate the pibs/tubs Makefile.in using automake.
#
# Copyright (c) 2002 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id$
#

EXTRA_DIST              = $(shell ls -1 | egrep -v 'CVS|Makefile')
