#
# Makefile.am --
#
#      Template to generate test/dumps Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am,v 1.2 1999/06/30 10:32:25 strauss Exp $
#

EXTRA_DIST		= SNMPv2-MIB.corba-idl SNMPv2-MIB.corba-oid \
			  SNMPv2-MIB.mosy \
			  SNMPv2-MIB.imports SNMPv2-MIB.tree SNMPv2-MIB.types \
			  IF-MIB.imports IF-MIB.tree IF-MIB.types \
			  IF-MIB.mosy \
			  IF-MIB.corba-idl IF-MIB.corba-oid \
			  MAU-MIB.imports MAU-MIB.tree MAU-MIB.types \
			  MAU-MIB.mosy \
			  MAU-MIB.corba-idl MAU-MIB.corba-oid \
			  RMON2-MIB.imports RMON2-MIB.tree RMON2-MIB.types \
			  RMON2-MIB.mosy \
			  RMON2-MIB.corba-idl RMON2-MIB.corba-oid

