#
# Makefile.am --
#
#      Template to generate test/dumps Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am,v 1.2 1999/10/06 16:05:27 strauss Exp $
#

SUBDIRS = corba imports jax mosy orig-smiv2 smilint-smiv2 \
	  sming smiv1 smiv2 smiv2-smiv2 tree types
