#
# Makefile.am --
#
#      Template to generate test/mibs Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id$
#

EXTRA_DIST		= LIBSMI-TEST-MIB \
			  LIBSMI-TEST-001-MIB LIBSMI-TEST-002-MIB \
			  LIBSMI-TEST-003-MIB LIBSMI-TEST-004-MIB

