#
# Makefile.am --
#
#      Template to generate test/mibs Makefile.in using automake.
#
# Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am,v 1.2 1999/06/30 10:32:25 strauss Exp $
#

EXTRA_DIST		= LIBSMI-TEST-MIB \
			  LIBSMI-TEST-001-MIB LIBSMI-TEST-002-MIB \
			  LIBSMI-TEST-003-MIB LIBSMI-TEST-004-MIB \
			  LIBSMI-TEST-005-MIB LIBSMI-TEST-006-MIB \
			  LIBSMI-TEST-007-MIB LIBSMI-TEST-008-MIB \
			  LIBSMI-TEST-009-MIB

